--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,15 @@
     <string name="favorite" translatable="true">Favorite</string>
     <string name="add_to_favorite" translatable="true">Add to Favorites</string>
     <string name="added_to_favorite" translatable="true">Added to Favorites</string>
+    <string name="added_to_favorites" translatable="true">Added to Favorites!</string>
+    <string name="removed_from_favorites" translatable="true">Removed from Favorites!</string>
     <string name="movies" translatable="true">Movies</string>
     <string name="no_api_response" translatable="true">"No Response from API.  Please check network connection."</string>
     <string name="ok" translatable="true">Ok</string>
     <string name="content_authority">com.example.fabiohh.popularmovies</string>
     <string name="trailers" translatable="true">Trailers</string>
     <string name="reviews" translatable="true">Reviews</string>
+    <string name="missing_api_key" translatable="true">"Missing API Key. See README file."</string>
     <string name="no_reviews_yet" translatable="true">No Reviews yet!</string>
+    <string name="no_internet" translatable="true">"No Internet Connection.  Please check your connection and try again.  (Movie Reviews and Trailer will not work properly offline!)"</string>
 </resources>
